# tango-textual-inversion

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
configs/: textual_inversion.jsonnet
tests/integrations/diffusers/: format_test.py
textual_inversion/: templates.py
textual_inversion/common/testing/: __init__.py
textual_inversion/helper/: data.py
textual_inversion/integrations/diffusers/: __init__.py  format.py
textual_inversion/integrations/torch/: data_collator.py  optim.py  textual_inversion_engine.py
textual_inversion/integrations/transformers/: clip_tokenizer.py
textual_inversion/models/: __init__.py  stable_diffusion.py
textual_inversion/steps/: __init__.py  create_pipeline.py  generate_images.py  setup_tokenizer_step.py  transform_data.py
textual_inversion/transforms/: __init__.py  examples.py  image.py  prompt.py
