[tool.poetry]
name = "tango-textual-inversion"
version = "0.1.0"
description = ""
authors = ["Shunsuke Kitada <shunsuke.kitada@linecorp.com>"]
readme = "README.md"
packages = [{include = "textual_inversion"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
ai2-tango = {extras = ["all"], version = "^1.0.1"}
diffusers = "^0.6.0"
torchvision = "^0.13.1"
ftfy = "^6.1.1"

[[tool.poetry.source]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113/"
secondary = true


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
jupyterlab = "^3.5.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
